test/sema/lambdas/lambda_capture_variable_not_in_scope.yl
// RUN: compiler %s 2>&1 -res-dump | filecheck %s
fn main() {
  // CHECK: [[# @LINE + 1 ]]:10: error: symbol 'x' not found
  ->() { x = 1; };

  let x = 0;
}
